smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/operations/operation-with-no-properties.smithy
$version: "2.0"
namespace smithy.example

operation GetFoo {}
