smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/no-sets-in-v2.smithy
// set shapes cannot be used in Smithy version 2.0
$version: "2.0"

namespace smithy.example

set InvalidSet {
    member: String
}
